refactor(locales): adjust about contents

--- a/src/locales/en/about.json
+++ b/src/locales/en/about.json
@@ -2,6 +2,6 @@
 	"title": "About Me",
 	"description": "Akmal Hisyam's about.",
 	"favoriteTechStack": {
-		"title": "Current Favorite Tech Stack"
+		"title": "Favorite Tech Stack"
 	}
 }
