--- a/src/locales/id/about.json
+++ b/src/locales/id/about.json
@@ -2,6 +2,6 @@
 	"title": "Tentang Saya",
 	"description": "Tentang Akmal Hisyam.",
 	"favoriteTechStack": {
-		"title": "Teknologi Favorit Saat Ini"
+		"title": "Tech Stack Favorit"
 	}
 }
